# azsdk-rust-msbuild25

./: .cspell.json  .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  azure.yaml
infra/: main.bicep  main.bicepparam  resources.bicep
src/: lib.rs  main.rs
static/: index.html
static/css/: style.css
static/js/: upload.js
